Update list of projects

--- a/index.html
+++ b/index.html
@@ -346,69 +346,251 @@
             <h2 class="stat-number" style="text-align: center;">PROJECTS</h2><br>
             <div class="projects-grid">
                 <div class="project-card">
-                    <div class="project-header">
-                        <h3 class="project-title">HabitGuard</h3>
-                        <img class="project-icon" src="https://cdn-icons-png.flaticon.com/512/888/888954.png" alt="Android">
-                    </div>
-                    <div class="project-meta">
-                        <h4>Comp. Info. Sci. Capstone</h4>
-                        <h5>Spring 2025</h5>
-                    </div>
-                    <div class="project-content">
-                        <p>Android mobile app for finance with habit analytics. Uses machine learning to predict spending patterns and suggest behavioral changes.</p>
+                    <div class="card-content">
+                        <div class="card-header">
+                            <h3 class="card-title">HabitGuard</h3>
+                            <a href="https://github.com/jvillanueva3651/HabitGuard" target="_blank" rel="noopener noreferrer">
+                                <img class="card-icon" src="habit_guard.png" alt="Project icon">
+                            </a>
+                        </div>
+                        <div class="card-meta">
+                            <span style="color: #f0f0f0;">Final Project Capstone | Mobile App</span>
+                            <span>Spring25</span>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-description">
+                                My inaugural Android app developed through Android Studio, marking my transition into mobile development. This project helped me:
+                            </p>
+                            <div>
+                                <p>📱 <strong>Mastered Kotlin fundamentals</strong> through hands-on implementation</p>
+                                <p>🔐 <strong>Integrated Firebase</strong> for authentication and backend services</p>
+                                <p>🔄 <strong>Applied software engineering principles</strong> from requirements to deployment</p>
+                                <p>📈 <strong>Delivered a functional MVP</strong> tracking spending habits</p>
+                            </div>
+                            <p class="card-tech">
+                                <strong>Learning Milestones:</strong>Android Studio, Kotlin, Firebase Auth/Realtime DB, UI Design
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-header">
-                        <h3 class="project-title">Wearable UI/UX on Mental Health</h3>
-                        <img class="project-icon" src="https://cdn-icons-png.flaticon.com/512/2965/2965300.png" alt="Wearable">
-                    </div>
-                    <div class="project-meta">
-                        <h4>Comp. Info. Sci. Capstone</h4>
-                        <h5>Spring 2025</h5>
-                    </div>
-                    <div class="project-content">
-                        <p>User-centered UI/UX design for mental health wearables. Conducted user research with 50+ participants to optimize interface for anxiety reduction.</p>
+                    <div class="card-content">
+                        <div class="card-header">
+                            <h3 class="card-title">Wearable's UI/UX on Mental Health</h3>
+                            <a href="TODO" target="_blank" rel="noopener noreferrer">
+                                <img class="card-icon" src="IACIS.png" alt="Project icon">
+                            </a>
+                        </div>
+                        <div class="card-meta">
+                            <span style="color: #f0f0f0;">Published Research | IACIS Conference</span>
+                            <span>Spring25</span>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-description">
+                                <strong>Peer-reviewed publication</strong> exploring how wearable UI/UX design can address mental health challenges in tech. Key contributions:
+                            </p>
+                            <div>
+                                <p>👥 Led user studies with <strong>100+ participants</strong> to identify anxiety-reducing interface patterns</p>
+                                <p>📝 Published in <strong>International Association for Computer Information Systems</strong> conference proceedings</p>
+                                <p>💡 Bridged computer science and mental health perspectives through HCI research</p>
+                            </div>
+                            <p class="card-tech">
+                                <strong>Learning Milestones:</strong>Research Procedure, Peer Review, UI/UX Design, Mental Health, Survey Analysis
+                            </p>
+                        </div>
                     </div>
                 </div>
-
-  <!-- Infectious Spread -->
-  <div class="project-card">
-    <img class="project-icon" src="https://cdn-icons-png.flaticon.com/512/2785/2785473.png" alt="VBA icon">
-    <h3>Simulating Infectious Spread</h3>
-    <h4>Modeling with VBA/Excel</h4>
-    <h5>Spring 2025</h5>
-    <p>Fetching, processing, analyzing data with VBA.</p>
-  </div>
-
-  <!-- Handedness ML -->
-  <div class="project-card">
-    <img class="project-icon" src="https://cdn-icons-png.flaticon.com/512/2103/2103633.png" alt="AI icon">
-    <h3>Determining Handedness</h3>
-    <h4>Machine Learning and AI</h4>
-    <h5>Fall 2023 - Spring 2024</h5>
-    <p>Developing a CNN to classify handedness from images.</p>
-  </div>
-
-  <!-- Cuckoo Sandbox -->
-  <div class="project-card">
-    <img class="project-icon" src="https://cdn-icons-png.flaticon.com/512/2489/2489076.png" alt="Cybersecurity icon">
-    <h3>Cuckoo Sandbox Malware Analysis</h3>
-    <h4>Cybersecurity</h4>
-    <h5>Spring 2024</h5>
-    <p>Analyzing malware with purple team approach.</p>
-  </div>
-
-  <!-- Movie Database -->
-  <div class="project-card">
-    <img class="project-icon" src="https://cdn-icons-png.flaticon.com/512/2772/2772128.png" alt="Database icon">
-    <h3>Movie Database</h3>
-    <h4>Database Management</h4>
-    <h5>Spring 2024</h5>
-    <p>Structured PostgreSQL data storage and retrieval.</p>
-  </div>
-</div>
-
+                <div class="project-card">
+                    <div class="card-content">
+                        <div class="card-header">
+                            <h3 class="card-title">Epidemiological Spread Simulation</h3>
+                            <a href="TODO" target="_blank" rel="noopener noreferrer">
+                                <img class="card-icon" src="VBA.png" alt="Project icon">
+                            </a>
+                        </div>
+                        <div class="card-meta">
+                            <span style="color: #f0f0f0;">Advanced Data Modeling | VBA/Excel</span>
+                            <span>Spring25</span>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-description">
+                                Developed a dynamic infection spread model demonstrating:
+                            </p>
+                            <div>
+                                <p>📊 <strong>Automated data processing</strong> of population health metrics using VBA macros</p>
+                                <p>🔄 <strong>SIRD simulations</strong> to predict outbreak scenarios</p>
+                                <p>📈 <strong>Interactive dashboards</strong> visualizing transmission rates and containment strategies</p>
+                            </div>
+                            <p class="card-tech">
+                                <strong>Learning Milestones:</strong>Big Data, Live Data, Visual Basic, Automation
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-content">
+                        <div class="card-header">
+                            <h3 class="card-title">Handedness Classification via CNN</h3>
+                            <a href="TODO" target="_blank" rel="noopener noreferrer">
+                                <img class="card-icon" src="handedness.png" alt="Project icon">
+                            </a>
+                        </div>
+                        <div class="card-meta">
+                            <span style="color: #f0f0f0;">Machine Learning Project</span>
+                            <span>Fall24/25</span>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-description">
+                                Designed and implemented a convolutional neural network to analyze hand dominance from image data:
+                            </p>
+                            <div>
+                                <p>🖐️ <strong>Dataset Creation</strong>: Compiled and labeled 150+ hand images for training</p>
+                                <p>🧠 <strong>Model Architecture</strong>: Custom CNN achieving 85% right-handed validation accuracy showing inherent class imbalance</p>
+                                <p>🔍 <strong>Feature Analysis</strong>: Identified key markers for left/right-hand dominance</p>
+                            </div>
+                            <p class="card-tech">
+                                <strong>Learning Milestones:</strong>Data Mining, Image Processing, Convolutional Neural Networks, TensorFlow, Python
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-content">
+                        <div class="card-header">
+                            <h3 class="card-title">Advanced Malware Analysis with Cuckoo Sandbox</h3>
+                            <a href="TODO" target="_blank" rel="noopener noreferrer">
+                                <img class="card-icon" src="cuckoo.png" alt="Project icon">
+                            </a>
+                        </div>
+                        <div class="card-meta">
+                            <span style="color: #f0f0f0;">Cybersecurity Research | Purple Team Approach</span>
+                            <span>Spring24</span>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-description">
+                                Conducted comprehensive malware analysis using Cuckoo Sandbox environment:
+                            </p>
+                            <div>
+                                <p>🛡️ <strong>Purple Team Methodology</strong>: Combined offensive and defensive techniques to analyze Morris Worm and Code Red malware samples</p>
+                                <p>🔍 <strong>Behavioral Analysis</strong>: Monitored API calls, registry changes, and network traffic patterns</p>
+                                <p>📊 <strong>Threat Reporting</strong>: Documented IOC's (Indicators of Compromise) and mitigation strategies</p>
+                            </div>
+                            <p class="card-tech">
+                                <strong>Learning Milestones:</strong>Cuckoo Sandbox, Wireshark, YARA, Volatility, CompTIA Security+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-content">
+                        <div class="card-header">
+                            <h3 class="card-title">Movie Database System</h3>
+                            <a href="TODO" target="_blank" rel="noopener noreferrer">
+                                <img class="card-icon" src="postgresql.png" alt="Project icon">
+                            </a>
+                        </div>
+                        <div class="card-meta">
+                            <span style="color: #f0f0f0;">Database Management System | PostgreSQL</span>
+                            <span>Spring24</span>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-description">
+                                Designed and implemented a comprehensive movie database system:
+                            </p>
+                            <div>
+                                <p>🎬 <strong>Database Architecture</strong>: Created normalized schema for 100+ movie records with actors, genres, and ratings</p>
+                                <p>⚡ <strong>Optimized Queries</strong>: Improved search performance by 10% through indexing and query optimization</p>
+                                <p>🔍 <strong>Advanced Features</strong>: Implemented stored procedures for complex analytics and recommendations</p>
+                            </div>
+                            <p class="card-tech">
+                                <strong>Learning Milestones:</strong>PostgreSQL, pgAdmin, Python (psycopg2), ERD Design
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-content">
+                        <div class="card-header">
+                            <h3 class="card-title">AI Pathfinding Visualizer</h3>
+                            <a href="TODO" target="_blank" rel="noopener noreferrer">
+                                <img class="card-icon" src="later" alt="Project icon">
+                            </a>
+                        </div>
+                        <div class="card-meta">
+                            <span style="color: #f0f0f0;">Python AI Project | Algorithm Visualization</span>
+                            <span>Spring24</span>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-description">
+                                Developed an interactive simulator comparing pathfinding algorithms:
+                            </p>
+                            <div>
+                                <p>🧭 <strong>Algorithm Implementation</strong>: Built A*, Dijkstra's, and Greedy BFS with Python</p>
+                                <p>🖥️ <strong>GUI Development</strong>: Created visualization toolkit using PyGame/Tkinter</p>
+                                <p>📊 <strong>Performance Analysis</strong>: Compared path efficiency and computation time across algorithms</p>
+                            </div>
+                            <p class="card-tech">
+                                <strong>Learning Milestones:</strong>Python, PyGame, NumPy, Matplotlib (for analytics)
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-content">
+                        <div class="card-header">
+                            <h3 class="card-title">Cross-Platform Data Recovery System</h3>
+                            <a href="TODO" target="_blank" rel="noopener noreferrer">
+                                <img class="card-icon" src="later" alt="Project icon">
+                            </a>
+                        </div>
+                        <div class="card-meta">
+                            <span style="color: #f0f0f0;">Digital Forensics Research</span>
+                            <span>Spring24</span>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-description">
+                                Developed advanced data recovery techniques for multiple operating systems:
+                            </p>
+                            <div>
+                                <p>💾 <strong>Algorithm Implementation</strong>: Built A*, Dijkstra's, and Greedy BFS with Python<strong>Multi-OS Recovery</strong>: Successfully recovered files from Windows NTFS, macOS HFS+, and Linux EXT4 systems</p>
+                                <p>🔍 <strong>Forensic Tools</strong>: Utilized Autopsy, FTK Imager, and ddrescue for disk analysis</p>
+                                <p>🛡️ <strong>USB Forensics</strong>: Recovered corrupted data from old USB devices with varying file systems</p>
+                            </div>
+                            <p class="card-tech">
+                                <strong>Learning Milestones:</strong>Autopsy, FTK Imager, ddrescue, Hex Editors, Write-blockers
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-content">
+                        <div class="card-header">
+                            <h3 class="card-title">RESTful API Service Architecture</h3>
+                            <a href="TODO" target="_blank" rel="noopener noreferrer">
+                                <img class="card-icon" src="later" alt="Project icon">
+                            </a>
+                        </div>
+                        <div class="card-meta">
+                            <span style="color: #f0f0f0;">Software Engineering | Web Services</span>
+                            <span>Fall23</span>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-description">
+                                Designed and implemented a scalable web API service with full lifecycle management:
+                            </p>
+                            <div>
+                                <p>🌐 <strong>RESTful Design</strong>: Developed 2+ API endpoints following REST principles with proper HTTP verbs</p>
+                                <p>🔐 <strong>Secure Authentication</strong>: Implemented JWT token-based auth with role-based access control</p>
+                                <p>📦 <strong>Database Integration</strong>: Connected to SQLite with efficient ORM mapping and query optimization</p>
+                            </div>
+                            <p class="card-tech">
+                                <strong>Learning Milestones:</strong>Node.js, OpenAPI, Postman, JWT, SQLite
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Right Panel - Now with properly rotated navigation -->
         <div class="right-panel" id="rightPanel">
             <div class="nav-menu">
