--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                                 Developed advanced data recovery techniques for multiple operating systems:
                             </p>
                             <div>
-                                <p>💾 <strong>Algorithm Implementation</strong>: Built A*, Dijkstra's, and Greedy BFS with Python<strong>Multi-OS Recovery</strong>: Successfully recovered files from Windows NTFS, macOS HFS+, and Linux EXT4 systems</p>
+                                <p>💾 <strong>Multi-OS Recovery</strong>: Successfully recovered files from Windows NTFS, macOS HFS+, and Linux EXT4 systems</p>
                                 <p>🔍 <strong>Forensic Tools</strong>: Utilized Autopsy, FTK Imager, and ddrescue for disk analysis</p>
                                 <p>🛡️ <strong>USB Forensics</strong>: Recovered corrupted data from old USB devices with varying file systems</p>
                             </div>
