Update icons and images

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                         <div class="card-header">
                             <h3 class="card-title">Advanced Malware Analysis with Cuckoo Sandbox</h3>
                             <a href="TODO" target="_blank" rel="noopener noreferrer">
-                                <img class="card-icon" src="cuckoo.png" alt="Project icon">
+                                <img class="card-icon" src="cuckoo.jpg" alt="Project icon">
                             </a>
                         </div>
                         <div class="card-meta">
@@ -486,7 +486,7 @@
                         <div class="card-header">
                             <h3 class="card-title">Movie Database System</h3>
                             <a href="TODO" target="_blank" rel="noopener noreferrer">
-                                <img class="card-icon" src="postgresql.png" alt="Project icon">
+                                <img class="card-icon" src="movieDB.png" alt="Project icon">
                             </a>
                         </div>
                         <div class="card-meta">
@@ -513,7 +513,7 @@
                         <div class="card-header">
                             <h3 class="card-title">AI Pathfinding Visualizer</h3>
                             <a href="TODO" target="_blank" rel="noopener noreferrer">
-                                <img class="card-icon" src="later" alt="Project icon">
+                                <img class="card-icon" src="AI.png" alt="Project icon">
                             </a>
                         </div>
                         <div class="card-meta">
@@ -540,7 +540,7 @@
                         <div class="card-header">
                             <h3 class="card-title">Cross-Platform Data Recovery System</h3>
                             <a href="TODO" target="_blank" rel="noopener noreferrer">
-                                <img class="card-icon" src="later" alt="Project icon">
+                                <img class="card-icon" src="data.png" alt="Project icon">
                             </a>
                         </div>
                         <div class="card-meta">
@@ -567,7 +567,7 @@
                         <div class="card-header">
                             <h3 class="card-title">RESTful API Service Architecture</h3>
                             <a href="TODO" target="_blank" rel="noopener noreferrer">
-                                <img class="card-icon" src="later" alt="Project icon">
+                                <img class="card-icon" src="GeoLocator.png" alt="Project icon">
                             </a>
                         </div>
                         <div class="card-meta">
@@ -604,9 +604,6 @@
                                     <div class="card-content">
                                         <div class="card-header">
                                             <h3 class="card-title">International Summer Institute Program Assistant</h3>
-                                            <a href="TODO" target="_blank" rel="noopener noreferrer">
-                                                <img class="card-icon" src="later" alt="Project icon">
-                                            </a>
                                         </div>
                                         <div class="card-meta">
                                             <span style="color: #f0f0f0;">SAKAE International Summer Institute</span>
@@ -633,9 +630,6 @@
                                     <div class="card-content">
                                         <div class="card-header">
                                             <h3 class="card-title">Department Assistant</h3>
-                                            <a href="TODO" target="_blank" rel="noopener noreferrer">
-                                                <img class="card-icon" src="later" alt="Project icon">
-                                            </a>
                                         </div>
                                         <div class="card-meta">
                                             <span style="color: #f0f0f0;">Washburn University Computer Science Department</span>
@@ -668,9 +662,6 @@
                                     <div class="card-content">
                                         <div class="card-header">
                                             <h3 class="card-title">Athletic Events Operations Staff</h3>
-                                            <a href="TODO" target="_blank" rel="noopener noreferrer">
-                                                <img class="card-icon" src="later" alt="Project icon">
-                                            </a>
                                         </div>
                                         <div class="card-meta">
                                             <span style="color: #f0f0f0;">Washburn University Athletics</span>
@@ -697,9 +688,6 @@
                                     <div class="card-content">
                                         <div class="card-header">
                                             <h3 class="card-title">Mathematics Instructional Specialist</h3>
-                                            <a href="TODO" target="_blank" rel="noopener noreferrer">
-                                                <img class="card-icon" src="later" alt="Project icon">
-                                            </a>
                                         </div>
                                         <div class="card-meta">
                                             <span style="color: #f0f0f0;">Sampoerna University | STEM Education</span>
@@ -735,9 +723,6 @@
                                     <div class="card-content">
                                         <div class="card-header">
                                             <h3 class="card-title">Multicultural Community Volunteer</h3>
-                                            <a href="TODO" target="_blank" rel="noopener noreferrer">
-                                                <img class="card-icon" src="later" alt="Project icon">
-                                            </a>
                                         </div>
                                         <div class="card-meta">
                                             <span style="color: #f0f0f0;">Faith-Based Organizations</span>
@@ -773,9 +758,6 @@
                                     <div class="card-content">
                                         <div class="card-header">
                                             <h3 class="card-title">Hospitality Support Volunteer</h3>
-                                            <a href="TODO" target="_blank" rel="noopener noreferrer">
-                                                <img class="card-icon" src="later" alt="Project icon">
-                                            </a>
                                         </div>
                                         <div class="card-meta">
                                             <span style="color: #f0f0f0;">Thunder Over the Heartland Airshow</span>
@@ -794,9 +776,6 @@
                                     <div class="card-content">
                                         <div class="card-header">
                                             <h3 class="card-title">Community Outreach Volunteer</h3>
-                                            <a href="TODO" target="_blank" rel="noopener noreferrer">
-                                                <img class="card-icon" src="later" alt="Project icon">
-                                            </a>
                                         </div>
                                         <div class="card-meta">
                                             <span style="color: #f0f0f0;">Topeka Rescue Mission</span>
@@ -821,9 +800,6 @@
                                     <div class="card-content">
                                         <div class="card-header">
                                             <h3 class="card-title">Retail Operations Volunteer</h3>
-                                            <a href="TODO" target="_blank" rel="noopener noreferrer">
-                                                <img class="card-icon" src="later" alt="Project icon">
-                                            </a>
                                         </div>
                                         <div class="card-meta">
                                             <span style="color: #f0f0f0;">Banana Ball Sports Event</span>
