--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                         <div class="horizontal-scroll">
                             <div class="project-container">
                                 <div class="ex-card" style="background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.7)), 
-                url('James.Tanasyah.jpg') center/cover no-repeat;">
+                url('WU.png') center/cover no-repeat;">
                                 </div>
                                 <div class="work-card">
                                     <div class="card-content">
@@ -651,12 +651,12 @@
                                     </div>
                                 </div>
                                 <div class="ex-card" style="background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.7)), 
-                url('James.Tanasyah.jpg') center/cover no-repeat;">
+                url('WU.png') center/cover no-repeat;">
                                 </div>
                             </div>
                             <div class="project-container">
                                 <div class="ex-card" style="background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.7)), 
-                url('James.Tanasyah.jpg') center/cover no-repeat;">
+                url('WU.png') center/cover no-repeat;">
                                 </div>
                                 <div class="work-card">
                                     <div class="card-content">
@@ -710,7 +710,7 @@
                                     </div>
                                 </div>
                                 <div class="ex-card" style="background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.7)), 
-                url('James.Tanasyah.jpg') center/cover no-repeat;">
+                url('SU.jpg') center/cover no-repeat;">
                                 </div>
                             </div>
                         </div>
@@ -752,7 +752,7 @@
                             </div>
                             <div class="project-container">
                                 <div class="ex-card" style="background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.7)), 
-                url('James.Tanasyah.jpg') center/cover no-repeat;">
+                url('TOTH.png') center/cover no-repeat;">
                                 </div>
                                 <div class="work-card">
                                     <div class="card-content">
@@ -789,12 +789,12 @@
                                     </div>
                                 </div>
                                 <div class="ex-card" style="background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.7)), 
-                url('James.Tanasyah.jpg') center/cover no-repeat;">
+                url('trm.png') center/cover no-repeat;">
                                 </div>
                             </div>
                             <div class="project-container">
                                 <div class="ex-card" style="background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.7)), 
-                url('James.Tanasyah.jpg') center/cover no-repeat;">
+                url('savannah.png') center/cover no-repeat;">
                                 </div>
                                 <div class="work-card">
                                     <div class="card-content">
