--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
                         </div>
                     </div>
                     <div class="scroll-section services-offered">
-                        <h3 class="subsection-title", style="text-align: right;">← Services Offered</h3>
+                        <h3 class="subsection-title", style="text-align: right;">← Services</h3>
                         <div class="horizontal-scroll reverse">
                             <div class="project-container">
                                 <div class="work-card">
